# ROSVOT

./: pyproject.toml
src/ROSVOT/inference/: rosvot.py
